# cpp-sandbox

./: README.md
Homework#1_2/: CMakeLists.txt
Homework#1_2/include/: bits_opers.h  math_opers.h
Homework#1_2/tests/: bits_opers_test.cpp
legacy/Homework#1_2/include/: simplelog.h
legacy/Homework#1_2/src/: bits_opers.cpp  math_opers.cpp
legacy/Homework#1_2/tests/: math_opers_test.cpp
legacy/Homework#3_4/: CMakeLists.txt
legacy/Homework#3_4/tests/: String_test.cpp
legacy/player/: CMakeLists.txt  README.md
legacy/player/include/: AudioDecoder.h  Decoder.h  Parser.h  String.h
legacy/player/src/: AudioDecoder.cpp  Player.cpp  VideoDecoder.cpp
legacy/player/tests/: .Parser_test.cpp.swp
lesson-1/example-1/: CMakeLists.txt  rectangle.cpp
lesson-1/example-2/: CMakeLists.txt  inheritance.cpp
lesson-1/example-3/: CMakeLists.txt  sum.cpp
lesson-1/example-4/: CMakeLists.txt  animal.cpp
player/: CMakeLists.txt  README.md
player/include/: .Parser.h.swp  AudioDecoder.h  Decoder.h  Parser.h  Player.h  VideoDecoder.h
player/src/: .Parser.cpp.swp  AudioDecoder.cpp  Parser.cpp  Player.cpp  String.cpp  VideoDecoder.cpp
player/tests/: Parser_test.cpp  Player_test.cpp
